# magellan

./: .gitignore  README.md  build.cmd  build.sh  mkdoc.sh  mth.json
certs/: README.md
doc/: Doxyfile  mainpage.md
doc/api/: map-latest-api-def.json  map-latest-api-def.yml
doc/api/doc/: map-latest-api-def.json
mth/: mth.json  runmth.cmd  runmth.sh
sim/: README.md  config.json  mad.sh  mrs.js  mrs.sh  response.ssdp
sim/rest/: basicsim.sh  evilmdns.sh  evilpub.sh  evilsim.sh  evilssdp.sh  evilssdp.ssdp  php.ini  runsim.sh
sim/rest/basic/config/: config.json  index.php
sim/rest/evil/: index.php
sim/rest/evil/config/: config.json
src/: AppDiscoverer.cpp  AppDiscoverer.hpp  AvahiDiscoverer.cpp  AvahiDiscoverer.hpp  BonjourDiscoverer.cpp  BonjourDiscoverer.hpp  CMakeLists.txt  Discoverer.hpp  ILogger.hpp  MagellanApi.cpp  MagellanApi.h  MagellanConstants.h  MagellanCore.cpp  MagellanCore.hpp  MagellanDataModel.hpp  MagellanJson.hpp  MagellanObject.hpp  MagellanTypes.h  ReferenceCountedObject.cpp  ReferenceCountedObject.hpp  Sem.hpp  SimpleLogger.cpp  SimpleLogger.hpp  SsdpDiscoverer.cpp  SsdpDiscoverer.hpp  TimerManager.cpp  TimerManager.hpp  UpnpDiscoverer.cpp  UpnpDiscoverer.hpp  WorkQueue.cpp  WorkQueue.hpp  build.sh  mth.cpp  ssdp.cpp
